# efanna-compile

./: CMakeLists.txt  README.md  testpy.py
src/: cmake_install.cmake  test_nndescent.cpp
